CREATE DATABASE IF NOT EXISTS construmob CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;
USE construmob;
CREATE TABLE IF NOT EXISTS cliente (id BIGINT AUTO_INCREMENT PRIMARY KEY,nome VARCHAR(120) NOT NULL,email VARCHAR(160) NOT NULL UNIQUE,telefone VARCHAR(20) NOT NULL);
CREATE TABLE IF NOT EXISTS profissional (id BIGINT AUTO_INCREMENT PRIMARY KEY,nome VARCHAR(120) NOT NULL,email VARCHAR(160) NOT NULL UNIQUE,telefone VARCHAR(20) NOT NULL,especialidade VARCHAR(100) NOT NULL,validado BOOLEAN NOT NULL DEFAULT FALSE);
CREATE TABLE IF NOT EXISTS servico (codigo BIGINT AUTO_INCREMENT PRIMARY KEY,nome VARCHAR(120) NOT NULL,categoria VARCHAR(80) NOT NULL,preco DECIMAL(12,2) NOT NULL,ativo BOOLEAN NOT NULL DEFAULT TRUE);
CREATE TABLE IF NOT EXISTS pedido_servico (numero BIGINT AUTO_INCREMENT PRIMARY KEY,data DATETIME NOT NULL,status VARCHAR(20) NOT NULL,cliente_id BIGINT NOT NULL,profissional_id BIGINT,localidade VARCHAR(160) NOT NULL,descricao VARCHAR(500) NOT NULL,CONSTRAINT fk_pedido_cliente FOREIGN KEY (cliente_id) REFERENCES cliente(id),CONSTRAINT fk_pedido_profissional FOREIGN KEY (profissional_id) REFERENCES profissional(id));
CREATE TABLE IF NOT EXISTS item_servico (id BIGINT AUTO_INCREMENT PRIMARY KEY,pedido_id BIGINT NOT NULL,servico_id BIGINT NOT NULL,quantidade INT NOT NULL,preco_unitario DECIMAL(12,2) NOT NULL,CONSTRAINT fk_item_pedido FOREIGN KEY (pedido_id) REFERENCES pedido_servico(numero),CONSTRAINT fk_item_servico FOREIGN KEY (servico_id) REFERENCES servico(codigo));
CREATE TABLE IF NOT EXISTS avaliacao (id BIGINT AUTO_INCREMENT PRIMARY KEY,pedido_id BIGINT NOT NULL UNIQUE,nota INT NOT NULL,comentario VARCHAR(500),data DATETIME NOT NULL,CONSTRAINT chk_avaliacao_nota CHECK (nota BETWEEN 1 AND 5),CONSTRAINT fk_avaliacao_pedido FOREIGN KEY (pedido_id) REFERENCES pedido_servico(numero));
