package br.edu.ifpa.construmob.domain.enums;
public enum StatusPedido { ABERTO, ACEITO, FINALIZADO, CANCELADO }
